fixed add button z-index

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -10,6 +10,7 @@
   cursor: pointer
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25)
   background: #6c5ce7
+  z-index: 100
   i
     color: white
 
